<resources>
    <string name="app_name">银天下</string>
    <string name="login_btn">登录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rechargeinfo_textone">1、充值账户均在第三方支付平台托管,请仔细阅读第三方支付平台的法律声明和服务协议,使用该第三方支付平台的服务即视为已同意其法律声明和服务协议的全部内容.</string>
    <string name="rechargeinfo_texttwo">2.充值费用暂免,如收款将另行通知.</string>
    <string name="rechargeinfo_textthree">3.充值(7*24小时)实时到账.</string>
    <string name="rechargeinfo_textfour">4.如果充值金额没有及时到账,可以与我公司或第三方支付平台联系.</string>
    <string name="rechargefirminfo_textone">1.请务必先发起提交后再登录支付宝进行付款!</string>
    <string name="rechargefirminfo_texttwo">2.可以直接使用手机支付宝进行转账付款</string>
    <string name="rechargefirminfo_textthree">3.请务必在付款支付宝认证姓名正确填写您在支付宝实名认证的身份证姓名</string>
    <string name="rechargefirminfo_textfour">4.请务必2小时内完成付款操作</string>
    <string name="applyresult_one">1.第一步:提交申请->第二步:登录【手机支付宝】->第三步:点击【转账】->第四步:【转账到银行卡】->第五步:根据以上信息按步骤完成充值.</string>
    <string name="applyresult_two">2.转账时间:默认保持两小时内到账才会实时到账</string>
    <string name="user_center_one">1.自动注册的会员初始密码"a123456".</string>
    <string name="user_center_two">2.为提高服务器效率,系统将自动清理注册一个月没有充值,或者两个月未登录,并且金额低于10元的账户.</string>
    <string name="user_center_three">1.生成链接不会立即扣除配额,只有用户使用该链接注册成功的时候,才会扣减配额</string>


    <string-array name="lottery_type">
        <item>全部彩种</item>
        <item>重庆时时彩</item>
        <item>天津时时彩</item>
        <item>新疆时时彩</item>
        <item>北京时时彩</item>
        <item>韩国1.5分彩</item>
        <item>东京1.5分彩</item>
        <item>加拿大3.5分彩</item>
        <item>台湾5分彩</item>
        <item>广东11选5</item>
        <item>山东11选5</item>
        <item>江西11选5</item>
        <item>极速11选5</item>
        <item>北京PK10</item>
        <item>江苏快3</item>
        <item>北京快乐8</item>
        <item>台湾宾果</item>
        <item>1分彩</item>
        <item>2分彩</item>
        <item>快乐吉祥8</item>
        <item>腾讯分分彩</item>
        <item>排列三、五</item>
        <item>福彩3D</item>
        <item>香港六合彩</item>
    </string-array>
    <array name="time">
        <item>最近一天</item>
        <item>最近三天</item>
        <item>最近七天</item>
        <item>最近第一月</item>
    </array>

    <array name="user_spinner">
        <item>代理</item>
        <item>玩家</item>
    </array>
    <array name="user_spinner2">
        <item>1天有效</item>
        <item>3天有效</item>
        <item>7天有效</item>
        <item>15天有效</item>
        <item>30天有效</item>
        <item>3个月有效</item>
        <item>6个月有效</item>
    </array>
    <array name="protect_pwd">
        <item>您的出生地是?</item>
        <item>您小学班主任的名字是?</item>
        <item>您中学班主任的名字是?</item>
        <item>您高中班主任的名字是?</item>
        <item>您大学班主任的名字是?</item>
        <item>您的小学校名是?</item>
        <item>您母亲的姓名是?</item>
        <item>您母亲的生日是?</item>
        <item>您父亲的姓名是?</item>
        <item>您父亲的生日是?</item>
        <item>您配偶的姓名是?</item>
        <item>您配偶的生日是?</item>
        <item>对你影响最大的人名字是?</item>
        <item>您最喜欢的运动是?</item>
        <item>您的学号(或工号)是?</item>
        <item>您最喜欢的明星名字是?</item>
        <item>您最熟悉的童年好友名字是?</item>

    </array>
    <array name="zhuanzhang_item_out">
        <item>主账户</item>
        <item>OG</item>
    </array>
    <string name="about_us">郑重提示:彩票有风险,投注需谨慎!禁止向未满18周岁的青少年出售彩票</string>
</resources>
