<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/RechargeFirmTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_height"
        android:background="@color/top_background">

        <ImageView
            android:id="@+id/TopBack"
            android:layout_width="@dimen/top_back"
            android:layout_height="@dimen/top_back"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="充值确认"
            android:textColor="@android:color/white"
            android:textSize="@dimen/top_textsize" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RechargeFirmRe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RechargeFirmTop">

        <TextView
            android:id="@+id/RechargeFirmTypeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="20px"
            android:text="充值金额："
            android:textColor="@android:color/black"
            android:textSize="30px" />

        <TextView
            android:textSize="30px"
            android:id="@+id/RechargeFirmZFBnameSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/RechargeFirmTypeText"
            android:text="5555"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/RechargeFirmRe"
        android:background="@android:color/darker_gray"></View>

    <TextView
        android:id="@+id/textMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view1"
        android:layout_margin="20px"
        android:text="您支付宝姓名："
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/RechargeFirmZFBname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view1"
        android:layout_margin="20px"
        android:layout_toRightOf="@id/textMoney"
        android:background="@null"
        android:hint="请输入您的支付宝姓名"
        android:inputType="number"
        android:textSize="30px" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/RechargeFirmZFBname"
        android:background="@android:color/darker_gray"
        android:visibility="invisible"></View>

    <TextView

        android:id="@+id/AccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view2"
        android:layout_margin="20px"
        android:text="填写姓名与您付款姓名不一致,无法自动到账."
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30px" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/AccountText"
        android:background="#B9D3EE"
        android:orientation="vertical">

        <Button
            android:id="@+id/ApplyTo"
            android:layout_width="match_parent"
            android:layout_height="60px"
            android:layout_margin="50px"
            android:background="@drawable/recharge_btn"
            android:text="发起申请"
            android:textColor="@color/my_btn_color"
            android:textSize="30px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40px"
            android:background="@drawable/linear_biankuang"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30px"
                android:text="请确保达到以下要求,否则无法自动到账："
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_marginRight="30px"
                android:layout_marginTop="30px"
                android:text="@string/rechargefirminfo_textone"
                android:textColor="#0000EE" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_marginRight="30px"
                android:layout_marginTop="30px"
                android:text="@string/rechargefirminfo_texttwo"
                android:textColor="#0000EE" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_marginRight="30px"
                android:layout_marginTop="30px"
                android:text="@string/rechargefirminfo_textthree"
                android:textColor="#0000EE" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_marginRight="30px"
                android:layout_marginTop="30px"
                android:text="@string/rechargefirminfo_textfour"
                android:textColor="#0000EE" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
