<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/RechargeTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_height"
        android:background="@color/top_background">

        <ImageView
            android:id="@+id/TopBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="充值"
            android:textColor="@android:color/white"
            android:textSize="23sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RechargeRe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RechargeTop">

        <TextView
            android:id="@+id/RechargeTypeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="充值方式"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/RechargeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/RechargeTypeText"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/RechargeZhiFuBao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="支付宝" />

            <RadioButton
                android:id="@+id/RechargeZhuanZhang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="转账汇款" />
        </RadioGroup>
    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/RechargeRe"
        android:background="@android:color/darker_gray"></View>

    <TextView
        android:id="@+id/textMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view1"
        android:layout_margin="10dp"
        android:text="充值金额"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/RechargeMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view1"
        android:layout_margin="10dp"
        android:layout_toRightOf="@id/textMoney"
        android:background="@null"
        android:hint="每次最少100元最多10000元"
        android:inputType="number"
        android:textSize="15sp" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/RechargeMoney"
        android:background="@android:color/darker_gray"></View>

    <TextView
        android:id="@+id/AccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view2"
        android:layout_margin="10dp"
        android:text="账户余额"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/AccountSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view2"
        android:layout_margin="10dp"
        android:layout_toRightOf="@id/AccountText"
        android:text="￥0"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/AccountSum"
        android:background="#B9D3EE"
        android:orientation="vertical">

        <Button
            android:id="@+id/ChongZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/recharge_btn"
            android:text="充值"
            android:textColor="@color/my_btn_color"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="@drawable/linear_biankuang"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="温馨提示："
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/rechargeinfo_textone"
                android:textColor="#0000EE" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/rechargeinfo_texttwo"
                android:textColor="#0000EE" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/rechargeinfo_textthree"
                android:textColor="#0000EE" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/rechargeinfo_textfour"
                android:textColor="#0000EE" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
