<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.king.gou.ui.proxyfragment.UserCenterActivity">

    <RelativeLayout
        android:id="@+id/ProxyTop"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/top_background">

        <ImageView
            android:id="@+id/_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="用户中心"
            android:textColor="@android:color/white"
            android:textSize="23sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ProxyTop">

        <RadioGroup
            android:id="@+id/userCenter_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioBtn1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="普通用户" />

            <RadioButton
                android:id="@+id/radioBtn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="链接开户" />

            <RadioButton
                android:id="@+id/radioBtn3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="链接管理" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/User_center_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userCenter_group"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="温馨提示" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_center_one" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_center_two" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_center_three" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/User_center_linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/User_center_linear"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="开户类型:    " />

            <Spinner
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/spinner_biankuang"
                android:entries="@array/user_spinner"
                android:gravity="center"></Spinner>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/User_center_LinkTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/User_center_linear2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="链接有效期: " />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_biankuang"
                android:entries="@array/user_spinner2"></Spinner>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/userCenter_EditLinear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Relative"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/Linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="3"
                    android:text="用户名:"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="7"
                    android:background="@null"
                    android:hint="5-10字母或数字,字母开头" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/userCenter_EditLinear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="3"
                    android:text="彩票返点:"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="7"
                    android:background="@null"
                    android:hint="范围0.0-12.6" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="3"
                    android:text="使用次数:"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="7"
                    android:background="@null"
                    android:hint="大于0的次数" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="3"
                    android:text="彩票返点:"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="7"
                    android:background="@null"
                    android:hint="范围0.0-12.6" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/userCenter_BtnTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userCenter_EditLinear1"
        android:layout_margin="30dp"
        android:background="@drawable/recharge_btn"
        android:text="确认"
        android:textColor="@color/my_btn_color"
        android:textSize="20sp" />
</RelativeLayout>
